# jen

./: .gitignore  README.md
backend/: .env.example  .gitignore  pyproject.toml
backend/backend/: main.py
backend/backend/src/: app.py
backend/backend/src/commons/utils/: env_config.py
backend/backend/src/memory_service/: memory.py  routes.py
backend/backend/src/search_service/: groq.py  groq_service.py  perplexity.py  perplexity_service.py  search_agent.py  search_routes.py
callHospital/: callHosipital.py  confirmAppointment.py
frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierrc  Makefile  jest.config.ts  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
frontend/.storybook/: preview.ts
frontend/src/__tests__/chat/: ChatPage.test.tsx
frontend/src/app/: data.js  globals.css  layout.js  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/chat/: page.tsx
frontend/src/app/memories/: page.js  page.tsx
frontend/src/components/: ErrorGeneral.tsx  Errors.tsx  Loading.tsx  animations.tsx  icons.tsx
frontend/src/constants/: errorMessages.ts
frontend/src/environments/: config.tsx  environment.dev.ts  environment.local.ts  environment.model.ts  environment.prod.ts
frontend/src/hooks/: useWindowSize.tsx
frontend/src/models/: constants.models.ts
frontend/src/services/: chatAPI.ts  formAPI.ts  index.ts  userAPI.ts  vendorAPI.ts
frontend/src/stories/: Button.stories.tsx  Introduction.mdx
frontend/src/utils/: stringValidators.tsx
temporary/: .gitignore  fetchai.py
(+171 files in other folders)
